--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-scrapy==0.25.0
-requests==2.4.3
-mongodb
-selenium==2.52.0
-phantomjs==2.1.1
-lxml==3.4.2
+scrapy==2.11.1
+requests==2.31.0
+sqlalchemy==2.0.29
+selenium==4.19.0
 
